# Low-Latency-project

./: .gitignore  CMakeLists.txt  LOCAL_VIEWING_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  batcher.hpp  main.cpp  network_stats.hpp  order.hpp  ring_buffer.hpp  ring_buffer_demo
benchmark/: QUICK_START.md  README.md  plots.py  requirements.txt
benchmark/local_results/: statistics.txt
deploy/: DEPLOYMENT_GUIDE.md  README.md  aws-setup.sh  cloudformation.yaml  deploy.sh  telemetry.service  trading-system.service
src/network_sim/: shm_sim.cpp  tcp_sim.cpp  udp_sim.cpp
telemetry/: QUICK_START.md  README.md  metrics.py  requirements.txt
